red border overlap fix

--- a/src/App.css
+++ b/src/App.css
@@ -1319,7 +1319,7 @@ img, span, button {
   top: 0; left: 0;
   width: 100%; height: 50%;
   background-color: rgba(255, 255, 255, 0.18);
-  border-top-left-radius: 5px;
+  border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   pointer-events: none;
 }
